Mograte content library to the official repo

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ iOSInjectionProject/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+secrets*.xcconfig
