relocate swiftlint so errors appear in libraries

--- a/Demo/MozillaSocial-iOS/.swiftlint.yml
+++ b/Demo/MozillaSocial-iOS/.swiftlint.yml
@@ -97,5 +97,10 @@ analyzer_rules: # Rules run by `swiftlint analyze`
   - capture_variable
   - unused_import
 
+included:
+  - ../../Sources
+  - ../../Tests
+  - ../../MoSoContent
+
 # reporter: "json" # reporter type (xcode, json, csv, checkstyle)
 reporter: 'xcode' # reporter type (xcode, json, csv, checkstyle)
