add folder to be included for swiftlint

--- a/Demo/MozillaSocial-iOS/.swiftlint.yml
+++ b/Demo/MozillaSocial-iOS/.swiftlint.yml
@@ -98,6 +98,7 @@ analyzer_rules: # Rules run by `swiftlint analyze`
   - unused_import
 
 included:
+  - ../../Demo
   - ../../Sources
   - ../../Tests
   - ../../MoSoContent
