--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@ iOSInjectionProject/
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
 secrets*.xcconfig
+.venv/
+Generated-Metrics/
