--- a/Sources/MoSoAnalytics/Config/metrics.yaml
+++ b/Sources/MoSoAnalytics/Config/metrics.yaml
@@ -12,10 +12,12 @@ identifiers:
     notification_emails:
       - kdemtchouk@mozilla.com
     expires: never
+    lifetime: user
     send_in_pings:
       - events
+    no_lint:
       - baseline
-      
+
   mastodon_account_id:
     type: string
     description: >
@@ -27,10 +29,12 @@ identifiers:
     notification_emails:
       - kdemtchouk@mozilla.com
     expires: never
+    lifetime: user
     send_in_pings:
       - events
+    no_lint:
       - baseline
-      
+
   mastodon_account_handle:
     type: string
     description: >
@@ -43,10 +47,12 @@ identifiers:
     notification_emails:
       - kdemtchouk@mozilla.com
     expires: never
+    lifetime: user
     send_in_pings:
       - events
+    no_lint:
       - baseline
-      
+
   adjust_device_id:
     type: string
     description: >
@@ -58,10 +64,12 @@ identifiers:
     notification_emails:
       - kdemtchouk@mozilla.com
     expires: never
+    lifetime: user
     send_in_pings:
       - events
+    no_lint:
       - baseline
-      
+
   user_agent:
     type: string
     description: >
@@ -73,10 +81,12 @@ identifiers:
     notification_emails:
       - kdemtchouk@mozilla.com
     expires: never
+    lifetime: user
     send_in_pings:
       - events
+    no_lint:
       - baseline
- 
+
 ui:
   impression:
     type: event
