feat(analytics): add share action

--- a/Sources/MoSoAnalytics/Glean/metrics.yaml
+++ b/Sources/MoSoAnalytics/Glean/metrics.yaml
@@ -172,6 +172,7 @@ ui:
             * `favorite`
             * `boost`
             * `bookmark`
+            * `share`
             * `general`
         type: string
       engagement_value:
