feat(demo app): update info plist to set non exempt encryption usage to false

--- a/Demo/MozillaSocial-iOS/MoSoContent/Info.plist
+++ b/Demo/MozillaSocial-iOS/MoSoContent/Info.plist
@@ -17,5 +17,7 @@
 	</array>
 	<key>DiscoverApiConsumerKey</key>
 	<string>$(DISCOVER_API_CONSUMER_KEY)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
