feat(demo app): update info plist to set non exempt encryption usage to false

--- a/Demo/MozillaSocial-iOS/MoSoContent/Info.plist
+++ b/Demo/MozillaSocial-iOS/MoSoContent/Info.plist
@@ -23,5 +23,9 @@
 	<string>$(BRAZE_API_KEY)</string>
 	<key>GroupID</key>
 	<string>$(GROUP_ID)</string>
+	<key>DiscoverApiConsumerKey</key>
+	<string>$(DISCOVER_API_CONSUMER_KEY)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
