--- a/Demo/MozillaSocial-iOS/bitrise.yml
+++ b/Demo/MozillaSocial-iOS/bitrise.yml
@@ -4,29 +4,20 @@ default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: ios
 trigger_map:
 - pull_request_source_branch: "*"
-  workflow: build-test-pipeline
-pipelines:
-  build-test-pipeline:
-    stages:
-    - test-build: {}
-    - run-test-groups: {}
-    - deploy-test-results: {}
-    - release-build: {}
-stages:
-  test-build:
-    workflows:
-    - test-build: {}
-  release-build:
-    workflows:
-    - release-build: {}
-  run-test-groups:
-    workflows:
-    - run-tests-unit: {}
-  deploy-test-results:
-    should_always_run: true
-    workflows:
-    - deploy-test-results: {}
+  workflow: run_tests
 workflows:
+  _setup:
+    summary: Builds from develop and distributes it to TestFlight for internal testing
+    description: The workflow will first clone your Git repository, then install profiles
+      and certificates for code signing, then pass it to Fastlane to build and distribute
+      the app to TestFlight.
+    steps:
+    - brew-install@0:
+        inputs:
+        - packages: swiftlint
+    - activate-ssh-key@4: {}
+    - git-clone@8: {}
+    - certificate-and-profile-installer@1: {}
   archive_and_export_app:
     summary: Run your Xcode tests and create an IPA file to install your app on a
       device or share it with your team.
@@ -36,7 +27,7 @@ workflows:
     steps:
     - activate-ssh-key@4: {}
     - git-clone@8: {}
-    - xcode-test@5:
+    - xcode-test:
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
         - scheme: "$BITRISE_SCHEME"
@@ -56,9 +47,6 @@ workflows:
       and certificates for code signing, then pass it to Fastlane to build and distribute
       the app to TestFlight.
     steps:
-    - activate-ssh-key@4: {}
-    - git-clone@8: {}
-    - certificate-and-profile-installer@1: {}
     - fastlane@3:
         inputs:
         - work_dir: "$BITRISE_DEMO_APP_DIR"
@@ -66,6 +54,8 @@ workflows:
         - connection: apple_id
         - lane: beta
     - deploy-to-bitrise-io@2: {}
+    before_run:
+    - _setup
   run_tests:
     summary: Run your Xcode tests and get the test report.
     description: The workflow will first clone your Git repository, cache and install
@@ -74,11 +64,12 @@ workflows:
     - activate-ssh-key@4: {}
     - git-clone@8: {}
     - restore-spm-cache@1: {}
-    - xcode-test@5:
+    - xcode-test:
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
         - scheme: "$BITRISE_SCHEME"
         - test_repetition_mode: retry_on_failure
+        - test_plan: UnitTests
         - cache_level: none
     - save-spm-cache@1: {}
     - deploy-to-bitrise-io@2: {}
