--- a/Demo/MozillaSocial-iOS/MoSoContent/Info.plist
+++ b/Demo/MozillaSocial-iOS/MoSoContent/Info.plist
@@ -15,7 +15,13 @@
 			</array>
 		</dict>
 	</array>
-	<key>DiscoverApiConsumerKey</key>
-	<string>$(DISCOVER_API_CONSUMER_KEY)</string>
+	<key>PocketAPIConsumerKey</key>
+	<string>$(POCKET_API_CONSUMER_KEY)</string>
+	<key>BrazeAPIEndpoint</key>
+	<string>$(BRAZE_API_ENDPOINT)</string>
+	<key>BrazeAPIKey</key>
+	<string>$(BRAZE_API_KEY)</string>
+	<key>GroupID</key>
+	<string>$(GROUP_ID)</string>
 </dict>
 </plist>
