--- a/Demo/MozillaSocial-iOS/MoSoContent/Info.plist
+++ b/Demo/MozillaSocial-iOS/MoSoContent/Info.plist
@@ -23,6 +23,8 @@
 	<string>$(BRAZE_API_KEY)</string>
 	<key>GroupID</key>
 	<string>$(GROUP_ID)</string>
+	<key>CFBundleAllowMixedLocalizations</key>
+	<true/>
 	<key>DiscoverApiConsumerKey</key>
 	<string>$(DISCOVER_API_CONSUMER_KEY)</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
