Add Apollo foundations

--- a/Demo/MozillaSocial-iOS/.swiftlint.yml
+++ b/Demo/MozillaSocial-iOS/.swiftlint.yml
@@ -105,6 +105,7 @@ included:
 excluded:
   - ../../Sources/MoSoAnalytics/Glean/Generated-Metrics
   - .build
+  - ../../Sources/ReadingListKit/GraphQL/Generated
 
 # reporter: "json" # reporter type (xcode, json, csv, checkstyle)
 reporter: 'xcode' # reporter type (xcode, json, csv, checkstyle)
