--- a/Sources/MoSoAnalytics/Glean/metrics.yaml
+++ b/Sources/MoSoAnalytics/Glean/metrics.yaml
@@ -21,6 +21,9 @@ identifiers:
     expires: never
     send_in_pings:
       - events
+      - baseline
+    no_lint:
+      - BASELINE_PING
 
   mastodon_account_id:
     type: string
@@ -42,6 +45,9 @@ identifiers:
     expires: never
     send_in_pings:
       - events
+      - baseline
+    no_lint:
+      - BASELINE_PING
 
   mastodon_account_handle:
     type: string
@@ -63,6 +69,9 @@ identifiers:
     expires: never
     send_in_pings:
       - events
+      - baseline
+    no_lint:
+      - BASELINE_PING
 
   adjust_device_id:
     type: string
@@ -84,6 +93,9 @@ identifiers:
     expires: never
     send_in_pings:
       - events
+      - baseline
+    no_lint:
+      - BASELINE_PING
 
   user_agent:
     type: string
@@ -105,6 +117,9 @@ identifiers:
     expires: never
     send_in_pings:
       - events
+      - baseline
+    no_lint:
+      - BASELINE_PING
 
 ui:
   impression:
